--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,21 @@
     padding: 0px;
     word-wrap: break-word;
 }
+
+.topicSection{    
+    padding: 10px;
+    border: 1px solid;
+    margin: 10px;
+}
+.topicTitle{
+    font-family: lucida calligraphy;
+    background-color: #6637df;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 10px;
+    padding: 5px;
+}
+.blockSection{
+    display: block;
+    text-align: center
+}
