--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,17 @@
 </div>
 
 <section [class]="sectionClass">
+  <div [class]="topicClass">Example For Routing</div>
+  <div [class]="blockClass">
+    <a routerLink="homeCmpnt">Home Comp</a>
+    <a routerLink="empCmpnt">Employee Comp</a>
+    <a routerLink="TwoWayBndgCmpnt">Two Way Binding Comp</a>
+    <a routerLink="StdntInfCmpnt">Student Info Comp</a>
+    <router-outlet></router-outlet>
+  </div>
+</section>
+
+<!-- <section [class]="sectionClass">
   <div [class]="topicClass">Example For Components, Nested Components, Styling Components, Interpolation, Property Binding, Attribute Binding, Class Binding, Style Binding, Events Binding</div>
   <app-employee [class]="blockClass"></app-employee>
 </section>
@@ -16,9 +27,9 @@
 </section>
 
 <section [class]="sectionClass">
-  <div [class]="topicClass">Example For Reading Data, Pipes</div>
+  <div [class]="topicClass">Example For Reading Data, Pipes, Custom Pipes</div>
   <app-student-info [class]="blockClass"></app-student-info>
-</section>
+</section> -->
 
 
 
