--- a/src/app/two-way-binding/two-way-binding.component.html
+++ b/src/app/two-way-binding/two-way-binding.component.html
@@ -1,5 +1,10 @@
-<input type="text" [value]="inputValue" (input)="inputValue = $event.target.value" name="inputBox_1"/><!-- Example For Two Way Binding -->
-<br/><br/>
-<div>{{inputValue}}</div>
-<br/>
-<input type="text" [(ngModel)]="inputValue" name="inputBox_2"/><!-- Example For Two Way Binding -->
+<section [class]="sectionClass">
+    <div [class]="topicClass">Example For Two Way Binding</div>
+    <div [class]="blockClass">
+        <input type="text" [value]="inputValue" (input)="inputValue = $event.target.value" name="inputBox_1"/><!-- Example For Two Way Binding -->
+        <br/><br/>
+        <div>{{inputValue}}</div>
+        <br/>
+        <input type="text" [(ngModel)]="inputValue" name="inputBox_2"/><!-- Example For Two Way Binding -->
+    </div>
+</section>
