--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <section [class]="sectionClass">
   <div [class]="topicClass">Example For Home Page</div>
   <div [class]="blockClass">
-    <h2>Welcome To Home Page</h2>
+    <h2 appCustomColor>Welcome To Home Page</h2>
   </div>
+  <button (click)="gotoEmployee()">Goto Employee</button>
 </section>
