Title in Home tab

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <section [class]="sectionClass">
-  <div [class]="topicClass">Example For Home Page</div>
+  <div [class]="topicClass">Example For Navigation</div>
   <div [class]="blockClass">
     <h2 appCustomColor>Welcome To Home Page</h2>
   </div>
