change in two way binding

--- a/src/app/two-way-binding/two-way-binding.component.html
+++ b/src/app/two-way-binding/two-way-binding.component.html
@@ -8,3 +8,12 @@
         <input type="text" [(ngModel)]="inputValue" name="inputBox_2"/><!-- Example For Two Way Binding -->
     </div>
 </section>
+
+<section [class]="sectionClass">
+    <div [class]="topicClass">Example For Displaying Next Character</div>
+    <div [class]="blockClass">
+        <input type="text" [value]="inputChar" (input)="inputChar = $event.target.value" name="inputBox_3"/><!-- Example For Two Way Binding -->
+        <br/><br/>
+        <div>{{inputNextChar}}</div>
+    </div>
+</section>
